redis.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: ykchen
spec:
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: redis
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: ykchen
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: "redis:4.0-alpine"
          ports:
            - containerPort: 6379
