xbk-bot.yml
apiVersion: v1
kind: Service
metadata:
  name: xbk-bot
  namespace: ykchen
  labels:
    app: xbk-bot
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    app: xbk-bot
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xbk-bot
  namespace: ykchen
spec:
  selector:
    matchLabels:
      app: xbk-bot
  template:
    metadata:
      labels:
        app: xbk-bot
    spec:
      containers:
        - name: bot
          image: "asia.gcr.io/ch-web-dev/ykchen/xbk-bot:v2"
          ports:
            - containerPort: 5000
